added some color decorators to recyclerview viewholders

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -71,7 +71,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="20dp"
-        android:text="Username"
+        android:text="John54"
         android:fontFamily="@font/lato_light"
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -102,7 +102,7 @@
         android:id="@+id/user_profile_fullname_res"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Name"
+        android:text="John Doe"
         android:fontFamily="@font/lato_light"
         android:textSize="15sp"
         android:layout_marginTop="40dp"
@@ -135,7 +135,7 @@
         android:id="@+id/user_profile_course_res"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Name"
+        android:text="Computer Science"
         android:fontFamily="@font/lato_light"
         android:textSize="15sp"
         android:layout_marginTop="40dp"
@@ -168,7 +168,7 @@
         android:id="@+id/user_profile_year_res"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Year"
+        android:text="3"
         android:fontFamily="@font/lato_light"
         android:textSize="15sp"
         android:layout_marginTop="40dp"
@@ -193,8 +193,8 @@
         android:id="@+id/profile_update"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:text="Update Profile"
-        android:textSize="15dp"
+        android:text="@string/update_profile_button"
+        android:textSize="15sp"
         android:fontFamily="@font/lato"
         android:textAllCaps="false"
         android:drawablePadding="12dp"
@@ -209,7 +209,7 @@
         android:id="@+id/profile_delete"
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:text="Delete my account"
+        android:text="@string/delete_my_account_button"
         android:fontFamily="@font/lato"
         android:drawableStart="@drawable/ic_delete"
         android:textAllCaps="false"
