--- a/app/src/main/res/drawable/auth_button_pressed.xml
+++ b/app/src/main/res/drawable/auth_button_pressed.xml
@@ -4,12 +4,6 @@
     <item android:state_pressed="false">
         <layer-list>
 
-            <item android:drawable="@drawable/ic_google_auth"
-                android:height="36dp"
-                android:width="36dp"
-                android:gravity="center_vertical"
-                android:left="86dp"/>
-
             <item>
                 <shape android:shape="rectangle">
                     <stroke android:width="1dp"/>
@@ -17,6 +11,12 @@
                     <corners android:radius="10dp"/>
                 </shape>
             </item>
+
+            <item android:drawable="@drawable/ic_google_auth"
+                android:height="36dp"
+                android:width="36dp"
+                android:gravity="center_vertical"
+                android:left="86dp"/>
 
         </layer-list>
     </item>
@@ -24,28 +24,29 @@
     <item android:state_pressed="true">
         <layer-list>
 
-            <item android:drawable="@drawable/ic_google_auth"
-                android:height="36dp"
-                android:width="36dp"
-                android:gravity="center_vertical"
-                android:left="86dp"/>
-
-            <item>
-                <shape android:shape="rectangle">
-                    <stroke android:width="1dp"/>
-                    <size android:width="306dp" android:height="68dp"/>
-                    <corners android:radius="10dp"/>
-                </shape>
-            </item>
-
-            <item>
+            <!--<item>
                 <shape android:shape="rectangle">
                     <stroke android:width="1dp"/>
                     <size android:width="306dp" android:height="68dp"/>
                     <corners android:radius="10dp"/>
                     <solid android:color="@color/auth_button_pressed"/>
                 </shape>
+            </item>-->
+
+            <item>
+                <shape android:shape="rectangle">
+                    <stroke android:width="1dp"/>
+                    <size android:width="306dp" android:height="68dp"/>
+                    <solid android:color="@color/auth_button_pressed"/>
+                    <corners android:radius="10dp"/>
+                </shape>
             </item>
+
+            <item android:drawable="@drawable/ic_google_auth"
+                android:height="36dp"
+                android:width="36dp"
+                android:gravity="center_vertical"
+                android:left="86dp"/>
 
         </layer-list>
     </item>
