--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -34,52 +34,69 @@
         app:layout_constraintTop_toTopOf="@id/ic_home_image"
         app:layout_constraintVertical_bias="0.32" />
 
-    <TextView
-        android:id="@+id/upcoming_text"
-        style="@style/textFont"
-        android:layout_width="wrap_content"
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
         android:layout_marginTop="70dp"
-        android:fontFamily="@font/work_sans_bold"
-        android:text="Upcoming"
+        android:orientation="vertical"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ic_home_image" />
+        app:layout_constraintTop_toBottomOf="@id/ic_home_image">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/upcoming_times_recyclerview"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="15dp"
-        tools:orientation="horizontal"
-        tools:itemCount="4"
-        tools:listitem="@layout/upcoming_time_item"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/upcoming_text"/>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/available_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Available"
-        android:layout_marginTop="22dp"
-        android:layout_marginStart="20dp"
-        style="@style/textFont"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/upcoming_times_recyclerview"/>
+            <TextView
+                android:id="@+id/upcoming_text"
+                style="@style/textFont"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:fontFamily="@font/work_sans_bold"
+                android:text="Upcoming"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/available_classrooms_recyclerview"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="15dp"
-        tools:orientation="horizontal"
-        tools:itemCount="2"
-        tools:listitem="@layout/available_class_item"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/available_text"/>
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/upcoming_times_recyclerview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="15dp"
+                tools:orientation="horizontal"
+                tools:itemCount="4"
+                tools:listitem="@layout/upcoming_time_item"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/upcoming_text"/>
+
+            <TextView
+                android:id="@+id/available_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Available"
+                android:layout_marginTop="22dp"
+                android:layout_marginStart="20dp"
+                style="@style/textFont"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/upcoming_times_recyclerview"/>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/available_classrooms_recyclerview"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginTop="15dp"
+                tools:orientation="horizontal"
+                tools:itemCount="2"
+                tools:listitem="@layout/available_class_item"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/available_text"/>
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.core.widget.NestedScrollView>
+
 
     <!--
     <TextView
