--- a/app/src/main/res/layout/upcoming_time_item.xml
+++ b/app/src/main/res/layout/upcoming_time_item.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="42dp"
+    android:layout_height="36dp"
     android:layout_marginEnd="14dp"
+    android:paddingHorizontal="13dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/upcoming_item_parent"
     android:background="@drawable/upcoming_time_item">
 
     <TextView
-        android:id="@+id/time_"
+        android:id="@+id/upcoming_time_"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="8am - 9am"
