profile frag setup

--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/auth_parent_layout"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/ic_auth_image"
         android:layout_width="36dp"
         android:layout_height="36dp"
-        android:src="@drawable/ic_ocr"
-        android:layout_marginTop="30dp"
         android:layout_marginStart="20dp"
+        android:layout_marginTop="30dp"
+        android:src="@drawable/ic_ocr"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/auth_ocr_text"
@@ -22,8 +22,8 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="2dp"
         android:fontFamily="@font/work_sans"
-        android:textColor="@android:color/black"
         android:text="@string/open_classrooms"
+        android:textColor="@android:color/black"
         android:textSize="26sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@id/ic_auth_image"
@@ -46,27 +46,27 @@
         android:id="@+id/auth_call_to_action"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/auth_call_to_action"
         android:fontFamily="@font/lato_light"
         android:gravity="center"
-        android:textSize="14sp"
         android:paddingLeft="18dp"
         android:paddingRight="18dp"
-        app:layout_constraintTop_toBottomOf="@id/auth_avatar"
-        app:layout_constraintStart_toStartOf="@id/auth_avatar"
-        app:layout_constraintEnd_toEndOf="@id/auth_avatar"
+        android:text="@string/auth_call_to_action"
+        android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@id/auth_login_button"
-        app:layout_constraintVertical_bias=".05"/>
+        app:layout_constraintEnd_toEndOf="@id/auth_avatar"
+        app:layout_constraintStart_toStartOf="@id/auth_avatar"
+        app:layout_constraintTop_toBottomOf="@id/auth_avatar"
+        app:layout_constraintVertical_bias=".05" />
 
-   <ProgressBar
-       android:id="@+id/auth_progress_circular"
-       android:layout_width="wrap_content"
-       app:layout_constraintBottom_toBottomOf="parent"
-       app:layout_constraintEnd_toEndOf="parent"
-       app:layout_constraintStart_toStartOf="parent"
-       android:indeterminateTint="@color/upcoming_item_border"
-       android:layout_height="wrap_content"
-       android:layout_marginBottom="85dp"/>
+    <ProgressBar
+        android:id="@+id/auth_progress_circular"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="85dp"
+        android:indeterminateTint="@color/upcoming_item_border"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/auth_login_button"
@@ -75,12 +75,13 @@
         android:layout_marginBottom="75dp"
         android:background="@drawable/auth_button_pressed"
         android:fontFamily="@font/lato"
+        android:gravity="center"
+        android:paddingEnd="-36dp"
+        android:paddingStart="-36dp"
+        android:paddingBottom="3dp"
         android:text="@string/sign_in_btn"
         android:textAllCaps="false"
         android:textSize="28sp"
-        android:gravity="center"
-        android:paddingBottom="3dp"
-        android:paddingEnd="-36dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -89,13 +90,13 @@
         android:id="@+id/auth_login_note"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/auth_login_note"
-        android:fontFamily="@font/lato_light"
-        android:textSize="14sp"
-        android:textAlignment="center"
         android:layout_marginTop="10dp"
-        app:layout_constraintStart_toStartOf="@id/auth_login_button"
+        android:fontFamily="@font/lato_light"
+        android:text="@string/auth_login_note"
+        android:textAlignment="center"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="@id/auth_login_button"
-        app:layout_constraintTop_toBottomOf="@id/auth_login_button"/>
+        app:layout_constraintStart_toStartOf="@id/auth_login_button"
+        app:layout_constraintTop_toBottomOf="@id/auth_login_button" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
