--- a/app/src/main/res/layout/available_class_item.xml
+++ b/app/src/main/res/layout/available_class_item.xml
@@ -1,31 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/available_background"
     android:layout_width="match_parent"
     android:layout_height="116dp"
-    android:background="@drawable/available_class_item_background"
-    android:layout_marginBottom="21dp">
+    android:layout_marginBottom="21dp"
+    android:background="@drawable/available_class_item_background">
 
     <TextView
         android:id="@+id/classroom_id"
+        style="@style/textFont"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="FF1"
-        style="@style/textFont"
         android:layout_marginStart="14dp"
         app:layout_constraintBottom_toTopOf="@id/classroom_view_count"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        tools:text="FF1" />
 
     <TextView
         android:id="@+id/classroom_view_count"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="viewed by 6 others"
         android:layout_margin="14dp"
         android:fontFamily="@font/lato"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"/>
+        app:layout_constraintStart_toStartOf="parent"
+        tools:text="viewed by 6 others" />
 
     <ImageView
         android:id="@+id/ic_class_item"
@@ -34,8 +35,8 @@
         android:layout_marginHorizontal="10dp"
         android:layout_marginVertical="9dp"
         android:src="@drawable/ic_assessment"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
