--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -9,11 +9,11 @@
         android:id="@+id/ic_profile_ocr_image"
         android:layout_width="36dp"
         android:layout_height="36dp"
-        android:src="@drawable/ic_ocr"
-        android:layout_marginTop="30dp"
         android:layout_marginStart="20dp"
+        android:layout_marginTop="30dp"
+        android:src="@drawable/ic_ocr"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/profile_user_name"
@@ -21,49 +21,49 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="3dp"
-        android:textColor="@android:color/black"
         android:fontFamily="@font/work_sans"
         android:text="@string/profile_text_welcome"
+        android:textColor="@android:color/black"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@id/ic_profile_ocr_image"
         app:layout_constraintStart_toEndOf="@id/ic_profile_ocr_image"
         app:layout_constraintTop_toTopOf="@id/ic_profile_ocr_image"
         app:layout_constraintVertical_bias="0.32" />
-    
-    <ImageView
+
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/user_profile_image"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
         android:layout_marginTop="40dp"
         android:src="@drawable/ic_account_circle"
-        app:layout_constraintTop_toBottomOf="@id/profile_user_name"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/profile_user_name" />
 
     <TextView
         android:id="@+id/user_profile_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="john54@gmail.com"
-        android:textSize="15sp"
-        android:fontFamily="@font/lato_light"
         android:layout_marginTop="10dp"
-        app:layout_constraintStart_toStartOf="@id/user_profile_image"
+        android:fontFamily="@font/lato_light"
+        android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="@id/user_profile_image"
-        app:layout_constraintTop_toBottomOf="@id/user_profile_image"/>
+        app:layout_constraintStart_toStartOf="@id/user_profile_image"
+        app:layout_constraintTop_toBottomOf="@id/user_profile_image"
+        tools:text="john54@gmail.com" />
 
     <TextView
         android:id="@+id/user_profile_username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Username"
-        android:textSize="15sp"
-        android:fontFamily="@font/lato_light"
-        android:layout_marginTop="40dp"
         android:layout_marginStart="20dp"
+        android:layout_marginTop="40dp"
+        android:fontFamily="@font/lato_light"
+        android:text="@string/profile_frag_username"
+        android:textSize="15sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/user_profile_email"/>
+        app:layout_constraintTop_toBottomOf="@id/user_profile_email" />
 
     <TextView
         android:id="@+id/user_profile_username_res"
@@ -71,119 +71,119 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="20dp"
-        android:text="John54"
         android:fontFamily="@font/lato_light"
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/user_profile_email"/>
+        app:layout_constraintTop_toBottomOf="@id/user_profile_email"
+        tools:text="John54" />
 
     <View
         android:id="@+id/view_separator_username"
         style="@style/divider"
-        android:layout_marginTop="18dp"
         android:layout_marginHorizontal="20dp"
-        app:layout_constraintTop_toBottomOf="@id/user_profile_username_res"
+        android:layout_marginTop="18dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/user_profile_username_res" />
 
     <TextView
         android:id="@+id/user_profile_fullname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Name"
-        android:fontFamily="@font/lato_light"
-        android:textSize="15sp"
-        android:layout_marginTop="40dp"
         android:layout_marginStart="20dp"
-        app:layout_constraintTop_toBottomOf="@id/view_separator_username"
-        app:layout_constraintStart_toStartOf="parent"/>
+        android:layout_marginTop="40dp"
+        android:fontFamily="@font/lato_light"
+        android:text="@string/profile_frag_name"
+        android:textSize="15sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/view_separator_username" />
 
     <TextView
         android:id="@+id/user_profile_fullname_res"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="John Doe"
-        android:fontFamily="@font/lato_light"
-        android:textSize="15sp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="20dp"
+        android:fontFamily="@font/lato_light"
+        android:textSize="15sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/view_separator_username"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        tools:text="John Doe" />
 
     <View
         android:id="@+id/view_separator_fullname"
         style="@style/divider"
-        android:layout_marginTop="18dp"
         android:layout_marginHorizontal="20dp"
-        app:layout_constraintTop_toBottomOf="@id/user_profile_fullname_res"
+        android:layout_marginTop="18dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/user_profile_fullname_res" />
 
     <TextView
         android:id="@+id/user_profile_course"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Course Program"
-        android:fontFamily="@font/lato_light"
-        android:textSize="15sp"
-        android:layout_marginTop="40dp"
         android:layout_marginStart="20dp"
-        app:layout_constraintTop_toBottomOf="@id/view_separator_fullname"
-        app:layout_constraintStart_toStartOf="parent"/>
+        android:layout_marginTop="40dp"
+        android:fontFamily="@font/lato_light"
+        android:text="@string/profile_frag_course_program"
+        android:textSize="15sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/view_separator_fullname" />
 
     <TextView
         android:id="@+id/user_profile_course_res"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Computer Science"
-        android:fontFamily="@font/lato_light"
-        android:textSize="15sp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="20dp"
+        android:fontFamily="@font/lato_light"
+        android:textSize="15sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/view_separator_fullname"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        tools:text="Computer Science" />
 
     <View
         android:id="@+id/view_separator_course"
         style="@style/divider"
-        android:layout_marginTop="18dp"
         android:layout_marginHorizontal="20dp"
-        app:layout_constraintTop_toBottomOf="@id/user_profile_course_res"
+        android:layout_marginTop="18dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/user_profile_course_res" />
 
     <TextView
         android:id="@+id/user_profile_year"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Year"
-        android:fontFamily="@font/lato_light"
-        android:textSize="15sp"
-        android:layout_marginTop="40dp"
         android:layout_marginStart="20dp"
-        app:layout_constraintTop_toBottomOf="@id/view_separator_course"
-        app:layout_constraintStart_toStartOf="parent"/>
+        android:layout_marginTop="40dp"
+        android:fontFamily="@font/lato_light"
+        android:text="@string/profile_frag_year"
+        android:textSize="15sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/view_separator_course" />
 
     <TextView
         android:id="@+id/user_profile_year_res"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="3"
-        android:fontFamily="@font/lato_light"
-        android:textSize="15sp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="20dp"
+        android:fontFamily="@font/lato_light"
+        android:textSize="15sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/view_separator_course"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        tools:text="3" />
 
     <View
         android:id="@+id/view_separator_year"
         style="@style/divider"
-        android:layout_marginTop="18dp"
         android:layout_marginHorizontal="20dp"
-        app:layout_constraintTop_toBottomOf="@id/user_profile_year_res"
+        android:layout_marginTop="18dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/user_profile_year_res" />
 
     <!--android:layout_width="match_parent"
     android:layout_height="1dp"
@@ -191,35 +191,35 @@
 
     <Button
         android:id="@+id/profile_update"
-        android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:text="@string/update_profile_button"
-        android:textSize="15sp"
-        android:fontFamily="@font/lato"
-        android:textAllCaps="false"
-        android:drawablePadding="12dp"
-        android:drawableStart="@drawable/ic_edit_profile"
+        android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginBottom="14dp"
         android:background="@drawable/background_profile_buttons"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/profile_delete"/>
+        android:drawableStart="@drawable/ic_edit_profile"
+        android:drawablePadding="12dp"
+        android:fontFamily="@font/lato"
+        android:text="@string/update_profile_button"
+        android:textAllCaps="false"
+        android:textSize="15sp"
+        app:layout_constraintBottom_toTopOf="@id/profile_delete"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/profile_delete"
-        android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:text="@string/delete_my_account_button"
-        android:fontFamily="@font/lato"
-        android:drawableStart="@drawable/ic_delete"
-        android:textAllCaps="false"
-        android:textSize="15sp"
-        android:textColor="@android:color/holo_red_dark"
-        android:drawablePadding="12dp"
-        android:layout_marginBottom="88dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
+        android:layout_marginBottom="88dp"
         android:background="@drawable/background_profile_buttons"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        android:drawableStart="@drawable/ic_delete"
+        android:drawablePadding="12dp"
+        android:fontFamily="@font/lato"
+        android:text="@string/delete_my_account_button"
+        android:textAllCaps="false"
+        android:textColor="@android:color/holo_red_dark"
+        android:textSize="15sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
