--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -9,11 +9,11 @@
         android:id="@+id/ic_profile_ocr_image"
         android:layout_width="36dp"
         android:layout_height="36dp"
-        android:src="@drawable/ic_ocr"
-        android:layout_marginTop="30dp"
         android:layout_marginStart="20dp"
+        android:layout_marginTop="30dp"
+        android:src="@drawable/ic_ocr"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/search_find_classroom"
@@ -21,9 +21,9 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="3dp"
-        android:textColor="@android:color/black"
         android:fontFamily="@font/work_sans"
-        android:text="Find a classroom"
+        android:text="@string/search_frag_header_text"
+        android:textColor="@android:color/black"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@id/ic_profile_ocr_image"
@@ -37,42 +37,43 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
         android:layout_marginTop="53dp"
-        android:paddingStart="16dp"
-        android:drawableStart="@drawable/ic_search_bb"
-        android:fontFamily="@font/lato_light"
-        android:drawablePadding="16dp"
-        android:textSize="15sp"
-        android:hint="Enter time or classroom to search"
         android:background="@drawable/search_background"
+        android:drawableStart="@drawable/ic_search_bb"
+        android:drawablePadding="16dp"
+        android:fontFamily="@font/lato_light"
+        android:hint="@string/search_frag_search_box"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"
+        android:textSize="15sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/search_find_classroom"/>
+        app:layout_constraintTop_toBottomOf="@id/search_find_classroom" />
 
     <FrameLayout
         android:id="@+id/search_frame"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        app:layout_constraintTop_toBottomOf="@id/search_edit_text"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/search_edit_text">
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center_horizontal"
-            android:paddingTop="100dp"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingTop="100dp">
 
             <ImageView
                 android:layout_width="300dp"
                 android:layout_height="300dp"
-                android:src="@drawable/auth_avatar"/>
+                android:src="@drawable/auth_avatar" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="@string/no_search_result_text"/>
+                android:text="@string/no_search_result_text" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
