--- a/app/src/main/res/layout/upcoming_time_item.xml
+++ b/app/src/main/res/layout/upcoming_time_item.xml
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/upcoming_item_parent"
     android:layout_width="wrap_content"
     android:layout_height="36dp"
     android:layout_marginEnd="14dp"
-    android:paddingHorizontal="13dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/upcoming_item_parent"
-    android:background="@drawable/upcoming_time_item">
+    android:background="@drawable/upcoming_time_item"
+    android:paddingHorizontal="13dp">
 
     <TextView
         android:id="@+id/upcoming_time_"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="8am - 9am"
         android:layout_marginHorizontal="15dp"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        tools:text="8am - 9am" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
