--- a/app/src/main/res/menu/activity_bottom_menu.xml
+++ b/app/src/main/res/menu/activity_bottom_menu.xml
@@ -3,14 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item android:id="@+id/home_menu"
-        android:title="Home"
+        android:title="@string/home_bottom_nav"
         android:icon="@drawable/ic_home" />
 
     <item android:id="@+id/search_menu"
-        android:title="Find"
+        android:title="@string/find_bottom_nav"
         android:icon="@drawable/ic_search_bb" />
 
     <item android:id="@+id/profile_menu"
-        android:title="Profile"
+        android:title="@string/profile_bottom_nav"
         android:icon="@drawable/ic_account_circle_bb"/>
 </menu>
