classroom detail initial impl

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,5 +22,7 @@
     <color name="item3_bg">#FFA9C4</color>
     <color name="item3_img">#BE8395</color>
 
+    <color name="dialog_close_btn">#FF3D00</color>
+
     <color name="upcoming_selected_item">#E5E5E5</color>
 </resources>
