--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -9,7 +9,7 @@
     tools:context=".views.MainActivity">
 
     <ImageView
-        android:id="@+id/ic_home_image"
+        android:id="@+id/dialog_image"
         android:layout_width="36dp"
         android:layout_height="36dp"
         android:layout_marginStart="20dp"
@@ -29,9 +29,9 @@
         android:textColor="@android:color/black"
         android:textSize="20sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@id/ic_home_image"
-        app:layout_constraintStart_toEndOf="@id/ic_home_image"
-        app:layout_constraintTop_toTopOf="@id/ic_home_image"
+        app:layout_constraintBottom_toBottomOf="@id/dialog_image"
+        app:layout_constraintStart_toEndOf="@id/dialog_image"
+        app:layout_constraintTop_toTopOf="@id/dialog_image"
         app:layout_constraintVertical_bias="0.32" />
 
     <ImageView
@@ -50,7 +50,7 @@
         android:layout_marginTop="70dp"
         android:orientation="vertical"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ic_home_image">
+        app:layout_constraintTop_toBottomOf="@id/dialog_image">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
