--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -36,10 +36,20 @@
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_marginTop="40dp"
-        android:src="@drawable/ic_account_circle"
+        tools:src="@drawable/ic_account_circle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/profile_user_name" />
+
+    <ProgressBar
+        android:id="@+id/image_load_progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminateTint="@color/upcoming_selected_item"
+        app:layout_constraintEnd_toEndOf="@id/user_profile_image"
+        app:layout_constraintStart_toStartOf="@id/user_profile_image"
+        app:layout_constraintTop_toTopOf="@id/user_profile_image"
+        app:layout_constraintBottom_toBottomOf="@id/user_profile_image"/>
 
     <TextView
         android:id="@+id/user_profile_email"
@@ -77,6 +87,17 @@
         app:layout_constraintTop_toBottomOf="@id/user_profile_email"
         tools:text="John54" />
 
+    <ProgressBar
+        android:id="@+id/username_load_progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminateTint="@color/upcoming_selected_item"
+        app:layout_constraintBottom_toBottomOf="@id/user_profile_username_res"
+        app:layout_constraintEnd_toEndOf="@id/user_profile_username_res"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="@id/user_profile_username_res"
+        app:layout_constraintTop_toTopOf="@id/user_profile_username_res" />
+
     <View
         android:id="@+id/view_separator_username"
         style="@style/divider"
@@ -109,6 +130,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/view_separator_username"
         tools:text="John Doe" />
+
+    <ProgressBar
+        android:id="@+id/fullname_load_progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminateTint="@color/upcoming_selected_item"
+        app:layout_constraintBottom_toBottomOf="@id/user_profile_fullname_res"
+        app:layout_constraintEnd_toEndOf="@id/user_profile_fullname_res"
+        app:layout_constraintHorizontal_bias="0.86"
+        app:layout_constraintStart_toStartOf="@id/user_profile_fullname_res"
+        app:layout_constraintTop_toTopOf="@id/user_profile_fullname_res" />
 
     <View
         android:id="@+id/view_separator_fullname"
@@ -143,6 +175,17 @@
         app:layout_constraintTop_toBottomOf="@id/view_separator_fullname"
         tools:text="Computer Science" />
 
+    <ProgressBar
+        android:id="@+id/course_load_progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminateTint="@color/upcoming_selected_item"
+        app:layout_constraintBottom_toBottomOf="@id/user_profile_course_res"
+        app:layout_constraintEnd_toEndOf="@id/user_profile_course_res"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@id/user_profile_course_res"
+        app:layout_constraintTop_toTopOf="@id/user_profile_course_res" />
+
     <View
         android:id="@+id/view_separator_course"
         style="@style/divider"
@@ -175,6 +218,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/view_separator_course"
         tools:text="3" />
+
+    <ProgressBar
+        android:id="@+id/year_load_progress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminateTint="@color/upcoming_selected_item"
+        app:layout_constraintBottom_toBottomOf="@id/user_profile_year_res"
+        app:layout_constraintEnd_toEndOf="@id/user_profile_year_res"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@id/user_profile_year_res"
+        app:layout_constraintTop_toTopOf="@id/user_profile_year_res" />
 
     <View
         android:id="@+id/view_separator_year"
