--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -67,7 +67,7 @@
             <ImageView
                 android:layout_width="300dp"
                 android:layout_height="300dp"
-                android:src="@drawable/auth_avatar" />
+                android:src="@drawable/search_png" />
 
             <TextView
                 android:layout_width="wrap_content"
