--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -90,6 +90,32 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/upcoming_times_recyclerview" />
 
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:id="@+id/home_frag_weekend_msg"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center_horizontal"
+                android:orientation="vertical"
+                android:layout_marginHorizontal="20dp"
+                android:layout_marginTop="15dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/available_text">
+
+                <ImageView
+                    android:layout_width="300dp"
+                    android:layout_height="300dp"
+                    android:src="@drawable/search_png" />
+
+                <TextView
+                    android:id="@+id/msg_text_weekends"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    tools:text="Hello, Classrooms are not available on Saturdays/Sundays" />
+
+            </androidx.appcompat.widget.LinearLayoutCompat>
+
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/available_classrooms_recyclerview"
                 android:layout_width="match_parent"
