--- a/app/src/main/res/layout/classroom_item_selected_dialog.xml
+++ b/app/src/main/res/layout/classroom_item_selected_dialog.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/dialog_parent"
     android:layout_width="match_parent"
+    android:background="@drawable/classroom_dialog_background"
     android:layout_height="match_parent">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -37,15 +38,41 @@
             tools:text="FF1" />
 
         <ImageView
-            android:id="@+id/time_classroom"
+            android:id="@+id/missed_session_img"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_info"
+            android:src="@drawable/ic_connect"
             android:layout_marginTop="48dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias=".1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/dialog_classroom_name"/>
+
+
+        <TextView
+            android:id="@+id/missed_session_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="You missed this session"
+            android:layout_marginStart="10dp"
+            android:textColor="@color/black"
+            android:fontFamily="@font/work_sans"
+            app:layout_constraintHorizontal_bias=".1"
+            app:layout_constraintStart_toEndOf="@id/missed_session_img"
+            app:layout_constraintTop_toTopOf="@id/missed_session_img"
+            app:layout_constraintBottom_toBottomOf="@id/missed_session_img"/>
+
+        <ImageView
+            android:id="@+id/time_classroom"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_info"
+            android:layout_marginTop="28dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias=".1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/missed_session_img"/>
+
 
         <TextView
             android:id="@+id/classroom_des"
@@ -125,14 +152,53 @@
             app:layout_constraintStart_toStartOf="@id/classroom_time_remaining_header"
             app:layout_constraintEnd_toEndOf="@id/classroom_time_remaining_header"/>
 
+        <ImageView
+            android:id="@+id/send_message_img"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_message"
+            android:layout_marginTop="28dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias=".1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/classroom_time_current_time"/>
+
+        <TextView
+            android:id="@+id/send_message_header"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Send a Message"
+            android:layout_marginStart="10dp"
+            android:textColor="@color/black"
+            android:fontFamily="@font/work_sans"
+            app:layout_constraintHorizontal_bias=".1"
+            app:layout_constraintStart_toEndOf="@id/send_message_img"
+            app:layout_constraintTop_toTopOf="@id/send_message_img"
+            app:layout_constraintBottom_toBottomOf="@id/send_message_img"/>
+
+        <TextView
+            android:id="@+id/send_message_sub_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Let other users know you want to\nuse this classroom"
+            android:fontFamily="@font/lato"
+            android:textSize="12sp"
+            android:textColor="@color/black"
+            android:layout_marginTop="8dp"
+            app:layout_constraintHorizontal_bias=".0"
+            app:layout_constraintTop_toBottomOf="@id/send_message_header"
+            app:layout_constraintStart_toStartOf="@id/send_message_header"
+            app:layout_constraintEnd_toEndOf="@id/send_message_header"/>
+
+
         <Button
             android:id="@+id/dialog_close"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="20dp"
-            android:background="@color/dialog_close_btn"
+            android:background="@drawable/background_profile_buttons"
             android:text="Close"
-            android:textColor="@color/white"
+            android:textColor="@color/dialog_close_btn"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
