--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -56,7 +56,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:fontFamily="@font/lato_light"
+        android:fontFamily="@font/lato"
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="@id/user_profile_image"
         app:layout_constraintStart_toStartOf="@id/user_profile_image"
@@ -69,7 +69,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="40dp"
-        android:fontFamily="@font/lato_light"
+        android:fontFamily="@font/lato"
         android:text="@string/profile_frag_username"
         android:textSize="15sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -81,11 +81,11 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="20dp"
-        android:fontFamily="@font/lato_light"
+        android:fontFamily="@font/lato"
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/user_profile_email"
-        tools:text="John54" />
+        tools:text="John 54" />
 
     <ProgressBar
         android:id="@+id/username_load_progress"
@@ -113,7 +113,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="40dp"
-        android:fontFamily="@font/lato_light"
+        android:fontFamily="@font/lato"
         android:text="@string/profile_frag_name"
         android:textSize="15sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -125,7 +125,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="20dp"
-        android:fontFamily="@font/lato_light"
+        android:fontFamily="@font/lato"
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/view_separator_username"
@@ -157,7 +157,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="40dp"
-        android:fontFamily="@font/lato_light"
+        android:fontFamily="@font/lato"
         android:text="@string/profile_frag_course_program"
         android:textSize="15sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -169,7 +169,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="20dp"
-        android:fontFamily="@font/lato_light"
+        android:fontFamily="@font/lato"
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/view_separator_fullname"
@@ -201,7 +201,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="40dp"
-        android:fontFamily="@font/lato_light"
+        android:fontFamily="@font/lato"
         android:text="@string/profile_frag_year"
         android:textSize="15sp"
         app:layout_constraintStart_toStartOf="parent"
@@ -213,7 +213,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="20dp"
-        android:fontFamily="@font/lato_light"
+        android:fontFamily="@font/lato"
         android:textSize="15sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/view_separator_course"
