get search, format result impl.

--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -63,6 +63,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="85dp"
+        android:visibility="invisible"
         android:indeterminateTint="@color/upcoming_item_border"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -77,7 +78,7 @@
         android:fontFamily="@font/lato"
         android:gravity="center"
         android:paddingEnd="-36dp"
-        android:paddingStart="-36dp"
+        android:paddingStart="16dp"
         android:paddingBottom="3dp"
         android:text="@string/sign_in_btn"
         android:textAllCaps="false"
