--- a/app/src/main/res/layout/classroom_item_selected_dialog.xml
+++ b/app/src/main/res/layout/classroom_item_selected_dialog.xml
@@ -12,7 +12,7 @@
         android:layout_height="438dp">
 
         <ImageView
-            android:id="@+id/dialog_image"
+            android:id="@+id/booked_image"
             android:layout_width="36dp"
             android:layout_height="36dp"
             android:layout_marginStart="20dp"
@@ -31,9 +31,9 @@
             android:textColor="@android:color/black"
             android:textSize="20sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@id/dialog_image"
-            app:layout_constraintStart_toEndOf="@id/dialog_image"
-            app:layout_constraintTop_toTopOf="@id/dialog_image"
+            app:layout_constraintBottom_toBottomOf="@id/booked_image"
+            app:layout_constraintStart_toEndOf="@id/booked_image"
+            app:layout_constraintTop_toTopOf="@id/booked_image"
             app:layout_constraintVertical_bias="0.32"
             tools:text="FF1" />
 
