--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -15,7 +15,7 @@
         tools:context=".views.MainActivity">
 
         <ImageView
-            android:id="@+id/dialog_image"
+            android:id="@+id/booked_image"
             android:layout_width="36dp"
             android:layout_height="36dp"
             android:layout_marginStart="20dp"
@@ -25,7 +25,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/home_ocr_text"
+            android:id="@+id/booked_header"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
@@ -35,9 +35,9 @@
             android:textColor="@android:color/black"
             android:textSize="20sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@id/dialog_image"
-            app:layout_constraintStart_toEndOf="@id/dialog_image"
-            app:layout_constraintTop_toTopOf="@id/dialog_image"
+            app:layout_constraintBottom_toBottomOf="@id/booked_image"
+            app:layout_constraintStart_toEndOf="@id/booked_image"
+            app:layout_constraintTop_toTopOf="@id/booked_image"
             app:layout_constraintVertical_bias="0.32" />
 
         <ImageView
@@ -56,7 +56,7 @@
             android:layout_marginTop="70dp"
             android:orientation="vertical"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/dialog_image">
+            app:layout_constraintTop_toBottomOf="@id/booked_image">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
