--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -43,6 +43,7 @@
             android:layout_marginHorizontal="20dp"
             android:layout_marginTop="53dp"
             android:maxLines="1"
+            android:maxHeight="1dp"
             android:background="@drawable/search_background"
             android:drawableStart="@drawable/ic_search_bb"
             android:drawablePadding="16dp"
