--- a/app/src/main/res/menu/activity_bottom_menu.xml
+++ b/app/src/main/res/menu/activity_bottom_menu.xml
@@ -10,6 +10,12 @@
         android:title="@string/find_bottom_nav"
         android:icon="@drawable/ic_search_bb" />
 
+    <!-- TODO: disabling booked feature, implementation will exceed deadline
+    TODO: t.o.l -->
+    <!--<item android:id="@+id/booked_menu"
+        android:title="@string/booked"
+        android:icon="@drawable/ic_booked_list" />-->
+
     <item android:id="@+id/profile_menu"
         android:title="@string/profile_bottom_nav"
         android:icon="@drawable/ic_account_circle_bb"/>
